# BaiTTS-CLI-rs

./: Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
src/: api.rs  args.rs  lrc.rs  main.rs  process.rs  utils.rs
