[package]
name = "baitts-cli-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
regex = "1.10"
hound = "3.5"
tempfile = "3.8"
indicatif = "0.17"
chardet = "0.2"
encoding_rs = "0.8"
url = "2.5"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
lazy_static = "1.4.0"
